--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
-  "pages":[
-    "pages/posts/posts",
-    "pages/welcome/index"
+  "pages": [
+    "pages/posts/post-detail/post-detail",
+    "pages/welcome/index",
+    "pages/posts/posts"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#08ADF2",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"#fff"
+    "navigationBarTextStyle": "#fff"
   }
 }
