--- a/app.json
+++ b/app.json
@@ -1,13 +1,33 @@
 {
   "pages": [
+    "pages/posts/posts",
     "pages/posts/post-detail/post-detail",
-    "pages/welcome/index",
-    "pages/posts/posts"
+    "pages/welcome/index"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#08ADF2",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "#fff"
+  },
+  "tabBar": {
+    "color": "#a9b7b7",
+    "selectedColor": "#11cd6e",
+    "borderStyle": "white",
+    "list": [
+      {
+        "pagePath": "pages/welcome/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/welcome/index",
+        "text": "日志"
+      },
+      {
+        "pagePath": "pages/welcome/index",
+        "text": "开心测试"
+      }
+    ]
   }
 }
